--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -80,12 +80,12 @@
     display: none;
 }
 
-[data-theme="dark"] #navbar {
+[data-theme="escuro"] #navbar {
     background-color: var(--nav-bg);
     border-bottom: 1px solid var(--accent-color);
 }
 
-[data-theme="dark"] .nav-links li a:hover {
+[data-theme="escuro"] .nav-links li a:hover {
     color: #ffffff;
 }
 
